Bug 307215 - "Places" icon in front of dolphin's address bar has fixed 16 size, not using size of "small icons"
Summary: "Places" icon in front of dolphin's address bar has fixed 16 size, not using ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: location (other bugs)
Version First Reported In: 2.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-22 15:29 UTC by Gernot Wieprecht
Modified: 2012-10-02 23:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments
screenshot of the hovered icon (15.16 KB, image/jpeg)
2012-09-22 15:30 UTC, Gernot Wieprecht
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gernot Wieprecht 2012-09-22 15:29:43 UTC
When the folders panel in dolphin is active, the address bar/breadcrumb bar has an icon for the "Places" at the left side of the bar. This icon has a fixed size of 16 instead of making use of the "small icons" size. Nonetheless the reserved space for this icon does have the size of the "small icons", it's just that the icon does not use this available space, it sits tiny and centered in a lot of wasted space.

Reproducible: Always

Steps to Reproduce:
1. Set the "small icons" to 48 to best see this effect.
2. Open the folders panel in dolphin's sidebar.
3. Look at the icon in the address bar, it still is shown in size 16.
4. Hover over the icon to see the reserved space for it - it is much bigger, could be 48. And the address bar is that high too.


Expected Results:  
The icon ifself should have the size of the "small icons", not only the surrounding space.
Comment 1 Gernot Wieprecht 2012-09-22 15:30:36 UTC
Created attachment 74089 [details]
screenshot of the hovered icon
Comment 2 Gernot Wieprecht 2012-09-22 15:36:15 UTC
By the way: Same for the icon at the right side of the editable address bar, it is always size 16.
Comment 3 Christoph Feck 2012-09-22 21:32:12 UTC
Git commit 6dc07bb7d190d27f7690d9d5c710332e224edd95 by Christoph Feck.
Committed on 22/09/2012 at 23:27.
Pushed by cfeck into branch 'KDE/4.9'.

Respect button's iconSize() in KUrlNavigator buttons

The actual minimum size is 22x22, not 16x16, because
both buttons are used next to a line edit, which adds
at least 6 pixels to the font size due to the frame.
FIXED-IN: 4.9.2

M  +1    -1    kfile/kurlnavigatorplacesselector.cpp
M  +1    -1    kfile/kurlnavigatortogglebutton.cpp

http://commits.kde.org/kdelibs/6dc07bb7d190d27f7690d9d5c710332e224edd95
Comment 4 Frank Reininghaus 2012-09-23 18:53:19 UTC
Thank you very much, Christoph :-)
Comment 5 Kai Uwe Broulik 2012-10-02 22:59:38 UTC
For the right icon of the addressbar you mean that tick to change back to the breadcrumb view? This is actually not a dolphin problem but a kdelibs one (where the breadcrumb bar is located) and also visible in eg. the File Open dialog. Please file a bug against Kdelibs about that. Thanks!
Comment 6 Christoph Feck 2012-10-02 23:39:15 UTC
Kai, the commit fixed both.