Respect button's iconSize() in KUrlNavigator buttons

The actual minimum size is 22x22, not 16x16, because
both buttons are used next to a line edit, which adds
at least 6 pixels to the font size due to the frame.

BUG: 307215
FIXED-IN: 4.9.2